After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669691 - nautilus SIGABRT when using templates (in undo code)
nautilus SIGABRT when using templates (in undo code)
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.3.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-08 16:26 UTC by Sebastien Bacher
Modified: 2012-02-08 17:45 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastien Bacher 2012-02-08 16:26:47 UTC
That bug has been opened on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/928802

"nautilus 1:3.3.5-0ubuntu1

TEST CASE:
1) Create a new template in Libreoffice Writer
2) Put the file in ~/Templates folder
3) In Nautilus right-click, select 'Create New Document' -> '<created template name>'

Result: nautilus crashes. New file from template is created
Expected Result: nautilus doesn't crash, new file was created from template
...
  • #0 __kernel_vsyscall
  • #1 __GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 64
  • #2 __GI_abort
    at abort.c line 92
  • #3 __libc_message
    at ../sysdeps/unix/sysv/linux/libc_fatal.c line 189
  • #4 malloc_printerr
    at malloc.c line 6283
  • #5 _int_free
    at malloc.c line 4795
  • #6 __GI___libc_free
    at malloc.c line 3738
  • #7 standard_free
    at /build/buildd/glib2.0-2.31.16/./glib/gmem.c line 98
  • #8 g_free
    at /build/buildd/glib2.0-2.31.16/./glib/gmem.c line 252
  • #9 create_strings_func
    at nautilus-file-undo-operations.c line 664
  • #10 nautilus_file_undo_info_get_strings
    at nautilus-file-undo-operations.c line 260
  • #11 update_undo_actions
    at nautilus-view.c line 2387
  • #12 g_cclosure_marshal_VOID__VOID
    at /build/buildd/glib2.0-2.31.16/./gobject/gmarshal.c line 85
  • #13 g_closure_invoke
    at /build/buildd/glib2.0-2.31.16/./gobject/gclosure.c line 774
  • #14 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.31.16/./gobject/gsignal.c line 3302
  • #15 g_signal_emit_valist
    at /build/buildd/glib2.0-2.31.16/./gobject/gsignal.c line 3033
  • #16 g_signal_emit
    at /build/buildd/glib2.0-2.31.16/./gobject/gsignal.c line 3090
  • #17 nautilus_file_undo_manager_set_action
    at nautilus-file-undo-manager.c line 247
  • #18 finalize_common
    at nautilus-file-operations.c line 961
  • #19 create_job_done
    at nautilus-file-operations.c line 5861
  • #20 mainloop_proxy_func
    at /build/buildd/glib2.0-2.31.16/./gio/gioscheduler.c line 286
  • #21 g_idle_dispatch
    at /build/buildd/glib2.0-2.31.16/./glib/gmain.c line 4629
  • #22 g_main_dispatch
    at /build/buildd/glib2.0-2.31.16/./glib/gmain.c line 2510
  • #23 g_main_context_dispatch
    at /build/buildd/glib2.0-2.31.16/./glib/gmain.c line 3047
  • #24 g_main_context_iterate
    at /build/buildd/glib2.0-2.31.16/./glib/gmain.c line 3118
  • #25 g_main_context_iterate
    at /build/buildd/glib2.0-2.31.16/./glib/gmain.c line 3055
  • #26 g_main_context_iteration
    at /build/buildd/glib2.0-2.31.16/./glib/gmain.c line 3179
  • #27 g_application_run
    at /build/buildd/glib2.0-2.31.16/./gio/gapplication.c line 1496
  • #28 main
    at nautilus-main.c line 101

Comment 1 Cosimo Cecchi 2012-02-08 17:45:18 UTC
Thanks, pushed a fix for master now.