undo: fix a double free in the Create operation strings func

https://bugzilla.gnome.org/show_bug.cgi?id=669691